--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/leaflet": "^1.3.2",
     "@tailwindcss/vite": "^4.1.18",
     "daisyui": "^5.5.14",
+    "lucide-vue-next": "^0.562.0",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
